[package]
name = "consensus-simtests"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
myso-simulator.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
consensus-types.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
myso-config.workspace = true
myso-macros.workspace = true
myso-protocol-config.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-store.workspace = true
tempfile.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
rand.workspace = true
