[package]
name = "consensus-types"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
fastcrypto.workspace = true
serde.workspace = true
base64.workspace = true
consensus-config.workspace = true


[dev-dependencies]
