[package]
name = "myso-adapter-transactional-tests"
version = "0.0.1"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
description = "Transactional tests for MySo Adapter"
license = "Apache-2.0"
publish = false
edition = "2024"

[dev-dependencies]
datatest-stable.workspace = true
myso-transactional-test-runner.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]
