[package]
name = "myso-analytics-indexer"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
csv.workspace = true
indexmap.workspace = true
move-core-types.workspace = true
object_store.workspace = true
num_enum.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
url.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
futures.workspace = true
parquet.workspace = true
arrow-array.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
mysten-metrics.workspace = true
myso-analytics-indexer-derive.workspace = true
eyre.workspace = true
tempfile.workspace = true
myso-types.workspace = true
telemetry-subscribers.workspace = true
myso-rpc-api.workspace = true
myso-storage.workspace = true
typed-store.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
myso-json-rpc-types.workspace = true
myso-package-resolver.workspace = true
arrow.workspace = true
gcp-bigquery-client = "0.27.0"
snowflake-api.workspace = true
tap.workspace = true
serde_yaml.workspace = true
lru.workspace = true
scoped-futures.workspace = true
myso-futures.workspace = true
myso-indexer-alt-framework.workspace = true
myso-indexer-alt-framework-store-traits.workspace = true
myso-indexer-alt-object-store.workspace = true
myso-indexer-alt-metrics.workspace = true

[dev-dependencies]
prost.workspace = true
myso-rpc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
zstd.workspace = true

[[bin]]
name = "myso-analytics-indexer"
path = "src/main.rs"
