[package]
name = "myso-authority-aggregation"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
myso-types.workspace = true
mysten-metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
