[package]
name = "myso-bridge-cli"
version.workspace = true
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["rand", "sol-types", "json-rpc", "provider-ws"] }
myso-bridge.workspace = true
myso-types.workspace = true
myso-config.workspace = true
myso-keys.workspace = true
myso-json-rpc-types.workspace = true
myso-rpc.workspace = true
myso-rpc-api.workspace = true
myso-sdk-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
