[package]
name = "myso-bridge-indexer"
version = "0.1.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["rand", "sol-types", "json-rpc", "provider-ws"] }
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
rayon = "1.10.0"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
myso-bridge.workspace = true
myso-bridge-schema.workspace = true
myso-sdk.workspace = true
myso-json-rpc-types.workspace = true
myso-pg-db.workspace = true
myso-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
myso-config.workspace = true
tempfile.workspace = true

[dev-dependencies]
myso-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"
diesel_migrations = "2.2.0"
myso-bridge = { workspace = true, features = ["test-utils"] }

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
