[package]
name = "myso-bridge-schema"
version = "0.1.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
diesel = { workspace = true, features = ["serde_json"] }
diesel_migrations.workspace = true
serde.workspace = true
serde_json.workspace = true
myso-field-count.workspace = true
strum.workspace = true
strum_macros.workspace = true
