[package]
name = "myso-bridge"
version.workspace = true
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
alloy = { version = "1.1.3", features = ["rand", "sol-types", "json-rpc", "provider-ws"] }
alloy-signer = "1.6"
alloy-multiprovider-strategy = { git = "https://github.com/0xsiddharthks/alloy-multiprovider-strategy", rev = "0f8d034e679631a715f9eed104089430ae57283a" }
tokio = { workspace = true, features = ["full"] }
myso-types.workspace = true
myso-authority-aggregation.workspace = true
arc-swap.workspace = true
strum_macros.workspace = true
num_enum.workspace = true
move-core-types.workspace = true
url.workspace = true
futures.workspace = true
once_cell.workspace = true
telemetry-subscribers.workspace = true
prometheus.workspace = true
async-trait.workspace = true
typed-store.workspace = true
mysten-metrics.workspace = true
myso-sdk.workspace = true
myso-keys.workspace = true
myso-config.workspace = true
clap.workspace = true
tracing.workspace = true
bin-version.workspace = true
bcs.workspace = true
myso-json-rpc-types.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
eyre.workspace = true
tempfile.workspace = true
axum.workspace = true
anyhow.workspace = true
fastcrypto.workspace = true
tap.workspace = true
rand.workspace = true
shared-crypto.workspace = true
backoff.workspace = true
mysten-common.workspace = true
enum_dispatch.workspace = true
myso-json-rpc-api.workspace = true
myso-test-transaction-builder.workspace = true
myso-metrics-push-client.workspace = true
hex-literal = { version = "0.3.4", optional = true }
test-cluster = { workspace = true, optional = true }
myso-sdk-types.workspace = true
myso-rpc.workspace = true
myso-rpc-api.workspace = true
tonic.workspace = true
tower.workspace = true
thiserror.workspace = true
reqwest.workspace = true

[dev-dependencies]
bincode.workspace = true
myso-config.workspace = true
myso-test-transaction-builder.workspace = true
maplit = "1.0.2"

[features]
test-utils = ["hex-literal", "test-cluster"]
