[package]
name = "myso-checkpoint-blob-indexer"
edition = "2024"
version.workspace = true
license = "Apache-2.0"
publish = false

[lib]
name = "myso_checkpoint_blob_indexer"
path = "src/lib.rs"

[[bin]]
name = "myso-checkpoint-blob-indexer"
path = "src/main.rs"

[dependencies]
myso-config.workspace = true
myso-indexer-alt-framework.workspace = true
myso-indexer-alt-framework-store-traits.workspace = true
myso-indexer-alt-object-store.workspace = true
myso-rpc.workspace = true
myso-types.workspace = true
myso-storage.workspace = true
myso-indexer-alt-metrics.workspace = true
prost.workspace = true
serde.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
prometheus.workspace = true
async-trait.workspace = true
object_store.workspace = true
serde_json.workspace = true
zstd.workspace = true
humantime.workspace = true

[lints]
workspace = true
