[package]
name = "myso-cluster-test"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
uuid.workspace = true
prometheus.workspace = true
fastcrypto.workspace = true
shared-crypto.workspace = true
derive_more = { workspace = true, features = ["debug"] }
regex.workspace = true

myso-faucet.workspace = true
myso-swarm.workspace = true
myso-swarm-config.workspace = true
myso-json-rpc-types.workspace = true
myso-sdk.workspace = true
myso-keys.workspace = true
myso-types.workspace = true
myso-core.workspace = true
myso-json.workspace = true
myso-config.workspace = true
myso-test-transaction-builder.workspace = true
telemetry-subscribers.workspace = true

test-cluster.workspace = true
move-core-types.workspace = true
myso-move-build.workspace = true
