[package]
name = "myso-core"
version = "0.1.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
antithesis_sdk.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
async-stream.workspace = true
axum.workspace = true
bcs.workspace = true
bincode.workspace = true
bytes.workspace = true
consensus-core.workspace = true
consensus-config.workspace = true
consensus-types.workspace = true
count-min-sketch.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
governor.workspace = true
im.workspace = true
itertools.workspace = true
lru.workspace = true
mockall.workspace = true
nonzero_ext.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rayon.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
simple_moving_average.workspace = true
static_assertions.workspace = true
strum.workspace = true
strum_macros.workspace = true
sysinfo.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
twox-hash.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-symbol-pool.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

mysten-metrics.workspace = true
prost.workspace = true
shared-crypto.workspace = true
myso-config.workspace = true
myso-rpc.workspace = true
myso-authority-aggregation.workspace = true
myso-execution.workspace = true
myso-framework.workspace = true
myso-swarm-config.workspace = true
myso-genesis-builder.workspace = true
myso-json-rpc-types.workspace = true
myso-macros.workspace = true
myso-network.workspace = true
myso-protocol-config.workspace = true
myso-transaction-checks.workspace = true
myso-simulator.workspace = true
myso-storage.workspace = true
myso-tls.workspace = true
myso-types.workspace = true
nonempty.workspace = true
zstd.workspace = true

[dev-dependencies]
myso-move-build.workspace = true
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
insta.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
serde_yaml.workspace = true
num-bigint = "0.4.4"

move-symbol-pool.workspace = true

myso-test-transaction-builder.workspace = true
myso-move.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = [
    "sync",
    "atomic64",
] }
[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false
