[package]
name = "myso-cost"
version = "0.0.1"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
myso-types.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
bcs.workspace = true

[dev-dependencies]
insta.workspace = true
test-cluster.workspace = true
myso-config.workspace = true
myso-swarm-config.workspace = true
myso-test-transaction-builder.workspace = true
myso-move-build.workspace = true
move-disassembler.workspace = true
myso-json-rpc-types.workspace = true
