[package]
name = "myso-data-ingestion-core"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
futures.workspace = true
mysten-metrics.workspace = true
notify.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
object_store.workspace = true
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
myso-rpc.workspace = true
myso-storage.workspace = true
myso-types.workspace = true
url.workspace = true
tempfile.workspace = true
tap.workspace = true
myso-protocol-config.workspace = true
myso-rpc-api.workspace = true
once_cell.workspace = true
zstd.workspace = true

[dev-dependencies]
rand.workspace = true
