[package]
name = "myso-data-store"
version = "0.1.0"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
chrono.workspace = true
csv.workspace = true
cynic.workspace = true
fastcrypto.workspace = true
lru.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
myso-config.workspace = true
myso-types.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[build-dependencies]
cynic-codegen.workspace = true
