[package]
name = "myso-e2e-tests"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
indexmap.workspace = true
insta.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true
reqwest.workspace = true
prost.workspace = true
tokio-stream.workspace = true

move-binary-format.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

mysten-common.workspace = true
myso-core.workspace = true
myso-framework-snapshot.workspace = true
myso-framework.workspace = true
myso-json-rpc.workspace = true
myso-json-rpc-api.workspace = true
myso-node.workspace = true
myso-macros.workspace = true
myso-network.workspace = true
myso-simulator.workspace = true
myso-storage.workspace = true
mysten-metrics.workspace = true
myso-tool.workspace = true
myso-protocol-config.workspace = true
myso-types.workspace = true
myso-move-build.workspace = true
myso-swarm-config.workspace = true
myso-swarm.workspace = true
myso-test-transaction-builder.workspace = true
myso-config.workspace = true
myso-json-rpc-types.workspace = true
myso-sdk.workspace = true
myso-keys.workspace = true
myso-light-client.workspace = true
myso-rpc-api.workspace = true
myso-rpc.workspace = true
shared-crypto.workspace = true
myso-sdk-types.workspace = true
tonic.workspace = true
prost-types.workspace = true

passkey-types.workspace = true
passkey-client.workspace = true
passkey-authenticator.workspace = true
coset.workspace = true
url.workspace = true
p256.workspace = true
