[package]
name = "myso-faucet"
version = "0.0.1"
edition = "2024"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.61"
axum.workspace = true
bin-version.workspace = true
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dashmap = "5.5.3"
thiserror = "1.0.40"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.37"
serde = { version = "1.0.144", features = ["derive", "rc"] }
tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
http = "1"
futures = "0.3.28"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
prometheus = "0.13.3"
scopeguard = "1.1"
tap = "1.0.1"
ttl_cache = "0.5.1"
eyre = "0.6.8"
tempfile = "3.3.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
tonic.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
# Use workspace versions for hyper and hyper-util
hyper.workspace = true
hyper-util.workspace = true
once_cell = "1.18.0"
tower_governor = "0.8"
async-recursion = "1.0.4"

# Workspace dependencies
myso-json-rpc-types.workspace = true
myso-rpc-api.workspace = true
myso-types.workspace = true
myso-config.workspace = true
myso-keys.workspace = true
myso-sdk.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
shared-crypto.workspace = true
mysten-network.workspace = true

[dev-dependencies]
test-cluster.workspace = true
wiremock = "0.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }

[[bin]]
name = "myso-faucet"
path = "src/main.rs"

[[bin]]
name = "merge_coins"
path = "src/bin/merge_coins.rs"
