[package]
name = "myso-framework-snapshot"
version.workspace = true
edition = "2024"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to create a bytecode snapshot of the current myso-framework"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
bin-version.workspace = true

myso-framework.workspace = true
myso-protocol-config.workspace = true
myso-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
myso-package-alt.workspace = true
move-package-alt.workspace = true
