[package]
name = "myso-framework-tests"
version = "0.1.0"
edition = "2024"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
description = "Runs Move tests for myso-framework"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[[test]]
name = "move_tests"
harness = false

[dev-dependencies]
datatest-stable.workspace = true
prometheus.workspace = true

myso-framework.workspace = true
myso-move.workspace = true
myso-move-build.workspace = true
myso-protocol-config.workspace = true
myso-types.workspace = true

move-bytecode-verifier = { path = "../../external-crates/move/crates/move-bytecode-verifier" }
myso-adapter = { path = "../../myso-execution/latest/myso-adapter", package = "myso-adapter-latest" }
myso-verifier = { path = "../../myso-execution/latest/myso-verifier", package = "myso-verifier-latest" }

move-bytecode-verifier-meter.workspace = true
move-cli.workspace = true
move-package-alt-compilation.workspace = true
move-unit-test.workspace = true
myso-config.workspace = true
tokio.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
fs_extra.workspace = true
