[package]
name = "myso-genesis-builder"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

shared-crypto.workspace = true
myso-config.workspace = true
myso-execution.workspace = true
myso-framework.workspace = true
myso-framework-snapshot.workspace = true
myso-protocol-config.workspace = true
myso-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(msim)'.dependencies]
myso-simulator.workspace = true
