[package]
name = "myso-http"
version = "0.0.1"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2024"
publish = false

[dependencies]
bytes.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "service"] }
pin-project-lite.workspace = true
socket2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
axum.workspace = true
reqwest.workspace = true
