[package]
name = "myso-indexer-alt-consistent-api"
version.workspace = true
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[dev-dependencies]
protox.workspace = true
tonic-prost-build.workspace = true
walkdir.workspace = true
