[package]
name = "myso-indexer-alt-consistent-store"
version.workspace = true
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["matched-path"] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
backoff.workspace = true
bcs.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
bytes.workspace = true
clap.workspace = true
const-str.workspace = true
fastcrypto.workspace = true
futures.workspace = true
http.workspace = true
integer-encoding.workspace = true
object_store.workspace = true
ouroboros.workspace = true
pin-project.workspace = true
prometheus.workspace = true
reqwest.workspace = true
rocksdb = { version = "0.22.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"] }
scoped-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

move-core-types.workspace = true

bin-version.workspace = true
mysten-network.workspace = true
myso-default-config.workspace = true
myso-futures.workspace = true
myso-indexer-alt-consistent-api.workspace = true
myso-indexer-alt-framework = { workspace = true, default-features = false }
myso-indexer-alt-metrics.workspace = true
myso-storage.workspace = true

[dev-dependencies]
tempfile.workspace = true
