[package]
name = "myso-indexer-alt-e2e-tests"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[[test]]
name = "transactional_tests"
harness = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
fastcrypto.workspace = true
prost.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-crypto.workspace = true
tempfile.workspace = true
tokio.workspace = true
url.workspace = true
zstd.workspace = true

simulacrum.workspace = true
myso-futures.workspace = true
myso-indexer-alt.workspace = true
myso-indexer-alt-consistent-api.workspace = true
myso-indexer-alt-consistent-store.workspace = true
myso-indexer-alt-framework = { workspace = true, features = ["postgres", "cluster"] }
myso-indexer-alt-graphql.workspace = true
myso-indexer-alt-jsonrpc.workspace = true
myso-indexer-alt-reader.workspace = true
myso-indexer-alt-schema.workspace = true
myso-pg-db.workspace = true
myso-rpc.workspace = true
myso-storage.workspace = true
myso-types.workspace = true
move-core-types.workspace = true
myso-move-build.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true
myso-protocol-config.workspace = true
myso-simulator.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
datatest-stable.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
telemetry-subscribers.workspace = true
tonic.workspace = true

myso-field-count.workspace = true
myso-framework.workspace = true
myso-json-rpc-types.workspace = true
myso-macros.workspace = true
myso-sdk.workspace = true
myso-swarm-config.workspace = true
myso-test-transaction-builder.workspace = true
myso-transactional-test-runner.workspace = true
test-cluster.workspace = true
tracing.workspace = true
