[package]
name = "myso-indexer-alt-framework-store-traits"
version.workspace = true
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
scoped-futures.workspace = true
